Fix layout issues

--- a/src/components/layout/header.module.scss
+++ b/src/components/layout/header.module.scss
@@ -1,7 +1,7 @@
 @use "colors";
 
 .header {
-    padding: 5px 10vw;
+    padding: 5px 10%;
     display: flex;
     flex-direction: row;
     align-items: center;
