--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,32 +1,31 @@
 @use "colors";
 
-html {
-    overflow: hidden;
-}
+$min-page-size: 700px;
+$max-content-size: 1000px;
+
 body {
-    background: colors.$gray-light;
+    background: #000;
     margin: 0;
 }
 
 .main {
     height: 100vh;
-    display: flex;
-    flex-direction: column;
+    min-width: $min-page-size;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: auto;
+    justify-content: stretch;
     color: hsla(0, 0%, 100%, .7);
     font-family: sans-serif;
     line-height: 1.5;
-    overflow-y: auto;
-    overflow-x: auto;
 }
 
 .body {
-    max-width: 100vw;
-    padding: 20px 10vw;
+    padding: 20px 10%;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-    flex-grow: 1;
-    background: colors.$gray-light;
+    align-items: center;
+    background-color: colors.$gray-light;
 }
 
 .title {
@@ -58,16 +57,9 @@ body {
     color: hsla(0, 0%, 100%, .3);
 }
 
-.container {
-    min-width: 700px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
 .content {
-    max-width: 1000px;
-    min-width: 700px;
-    flex: 1 1 auto;
+    max-width: $max-content-size;
+    margin: 0 10px;
     padding: 30px 60px 40px;
     background-color: colors.$gray-dark;
     border-radius: 3px;
