--- a/src/pages/404.module.scss
+++ b/src/pages/404.module.scss
@@ -1,5 +1,5 @@
 .container {
-    margin-top: 10vh;
+    margin-top: 10%;
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
